samples/_failures_safe/1761491596_ea7a28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3775e8b6.c: In function ‘main’:
./samples/SAFE/__tmp_3775e8b6.c:161:9: error: expected expression at end of input
  161 |         input[len - 1] =
      |         ^~~~~
./samples/SAFE/__tmp_3775e8b6.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3775e8b6.c:161:9: error: expected declaration or statement at end of input
